--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-validation",
+  "name": "lambda-api-validation",
   "version": "1.0.2",
   "author": "Andrew Keig <andrew.keig@gmail.com>",
   "description": "express-validation is a middleware that validates the body, params, query, headers and cookies of a request and returns a response with errors; if any of the configured validation rules fail.",
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/andrewkeig/express-validation"
+    "url": "https://github.com/Uzziel306/express-validation.git"
   },
   "dependencies": {
     "@types/joi": "^13.0.5",
